<resources>
    <string name="app_name">Acervo Virtual</string>
    <string name="titulo_tela_inicial">ACERVO VIRTUAL\nBIBLIOTECA LOCAL</string>
    <string name="mais_informacoes"><u>Mais informações</u></string>
    <string name="endereco">Biblioteca Vereador Doutor Nilson Albuquerque Conselheiro Lafaiete</string>
    <string name="horario_funcionamento">Segunda, Terça, Quarta, Quinta, Sexta:<b> 07:00 - 18:00</b> \nSábado, Domingo e Feriado: <b>Fechado</b></string>
    <string name="telefone"><b> (31) 3939-4901</b></string>
    <string name="title_activity_acervo">AcervoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_todos">TODOS OS TÍTULOS</string>
    <string name="menu_documentos_historicos">DOCUMENTOS HISTÓRICOS</string>
    <string name="menu_romance">ROMANCE</string>

    <!-- Livro A Escrava Isaura -->
    <string name="desc_livroescravaisaura"><b>A ESCRAVA ISAURA</b>\nBernardo Guimarães\n200 páginas</string>
    <string name="sobre_livroescravaisaura">
        A Escrava Isaura é um romance escrito por Bernardo Guimarães em 1875 e publicado no mesmo ano pela B.L. Garnier, Rio de Janeiro.
        Com o romance, Bernardo Guimarães obteve fama, sendo reconhecido até pelo imperador do Brasil, Dom Pedro II.
    </string>
    <string name="sobre_livroescravaisaura2">
        Narrando o drama de uma escrava aparentemente branca, educada e bela,
        o autor pretendeu mostrar ao público da época, 1875, os “abomináveis e hediondos” crimes da escravidão e o aviltamento da pessoa humana pela distinção de classe.
    </string>

    <!-- Livro A Distância dos Íntimos -->
    <string name="desc_livroadistanciadosintimos"><b>A DISTÂNCIA DOS ÍNTIMOS</b>\nAline Gonçalves\n112 Páginas</string>

    <!-- Livro Lafayette Rodrigues -->
    <string name="desc_livrolafayetterodrigues"><b>LAFAYETTE RODRIGUES PEREIRA: Um ilustre Queluzense</b>\nAllex Milagre</string>

    <!-- De vila Real de Queluz -->
    <string name="desc_livrodevilareal"><b>DE VILA REAL DE QUELUZ A CONSELHEIRO LAFAIETE\n(Pelas ruas da cidade)</b>\nAntônio Luiz Perdigão\n127 páginas</string>

    <!-- De vila Real de Queluz -->
    <string name="desc_livroestragosdachuva"><b>ESTRAGOS DA CHUVA</b>\nAluísio Santiago</string>

</resources>