<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".MaisInformacoesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/endereco"
        android:textSize="15dp"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:padding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horario_funcionamento"
        android:textSize="12dp"
        android:padding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textSize="12dp"
        android:padding="20dp"/>

    <FrameLayout
        android:id="@+id/frame_layout_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>