<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/seashell"
    tools:context=".SobreEscravaIsauraActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/livroaescravaisaura"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:text="@string/desc_livroescravaisaura"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:text="@string/sobre_livroescravaisaura"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:text="@string/sobre_livroescravaisaura2"/>

</LinearLayout>