<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seashell"
    android:orientation="vertical"
    tools:context=".ui.romance.RomanceFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_livroescravaisaura"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:src="@drawable/livroaescravaisaura" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/desc_livroescravaisaura"/>

                <TextView
                    android:id="@+id/saberMaisLivroEscravaIsaura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="50dp"
                    android:text="Saber mais..."/>

            </LinearLayout>
        </LinearLayout>

        <!-- Próximo livro -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:src="@drawable/livroadistanciadosintimos" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/desc_livroadistanciadosintimos"/>

                <TextView
                    android:id="@+id/saberMaisLivroAdistanciaDos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="50dp"
                    android:text="Saber mais..."/>

            </LinearLayout>

        </LinearLayout>

        <!-- Próximo livro -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:src="@drawable/livroestragosnachuva" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/desc_livroestragosdachuva"/>

                <TextView
                    android:id="@+id/SaberMaisLivroEstragosDaChuva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="50dp"
                    android:text="Saber mais..."/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>